codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__unmanaged_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Codex + LHC update available! 0.153.3 -> 9.9.9-lhc.1                                            │
│ See https://github.com/liminal-ai/codex-lhc/blob/lhc/lhc-docs/INSTALL.md for installation options. │
│                                                                                                    │
│ See full release notes:                                                                            │
│ https://github.com/liminal-ai/codex-lhc/releases/latest                                            │
╰────────────────────────────────────────────────────────────────────────────────────────────────────╯
