codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__vite_plus_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭─────────────────────────────────────────────────────────╮
│ ✨ Codex + LHC update available! 0.153.3 -> 9.9.9       │
│ Run vp install -g @openai/codex to update.              │
│                                                         │
│ See full release notes:                                 │
│ https://github.com/liminal-ai/codex-lhc/releases/latest │
╰─────────────────────────────────────────────────────────╯
